@@ -12,7 +12,7 @@
             <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
 
                                                     <meta name="author" value="Ceki Gulcu">
-            <meta name="email" value="cgu@apache.org">
+            <meta name="email" value="ceki@apache.org">
             
             <title>Log4j project - Documentation</title>
         </head>
