@@ -1,26 +1,0 @@
-
-PKG_DIR :=org/apache/log4j/examples
-DEPTH   :=../../../../../..
-JSOURCES:=SortAlgo.java Sort.java Trivial.java NumberCruncher.java\
-	NumberCruncherServer.java\
-	NumberCruncherClient.java\
-	MyPatternParser.java\
-	MyPatternLayout.java\
-	MyCategory.java\
-	MyCategoryTest.java\
-	MyCategoryFactory.java\
-
-
-JRMI:=NumberCruncherServer.java
-
-SUBDIRS := appserver
-
-# include master-rule file
-include $(DEPTH)/make/make.inc
-
-
-
-
-
-
-
