@@ -2,7 +2,7 @@
 <document>
 
   <properties>
-    <author email="cgu@apache.org">Ceki Gulcu</author>
+    <author email="ceki@apache.org">Ceki Gulcu</author>
     <title>Documentation</title>
   </properties>
 
